Added google auth client